--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@vee-validate/rules": "^4.13.2",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue-3": "^0.5.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "pinia": "^2.2.2",
+    "vee-validate": "^4.13.2",
+    "vue-router": "^4.4.3",
+    "vue3-toastify": "^0.2.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
